<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/register_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_white" />

    <EditText
        android:id="@+id/register_edt_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="44dp"
        android:text="17635901507"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/text_phone_number"
        android:inputType="number|phone"
        android:maxLength="11"
        android:padding="6dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_3"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/login_iv_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_edt_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/register_edt_phone_number"
        app:layout_constraintTop_toTopOf="@+id/register_edt_phone_number"
        app:srcCompat="@drawable/ic_clean" />

    <EditText
        android:id="@+id/register_edt_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/text_input_verity"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_3"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/register_edt_phone_number"
        app:layout_constraintStart_toStartOf="@+id/register_edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/register_edt_phone_number" />

    <TextView
        android:id="@+id/register_tv_get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/text_register_get_code"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/register_edt_code"
        app:layout_constraintEnd_toEndOf="@+id/register_edt_code"
        app:layout_constraintTop_toTopOf="@+id/register_edt_code"
        />

    <Button
        android:id="@+id/register_btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_button_rounder_bg_selector"
        android:text="@string/text_register_next_step"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/register_edt_code"
        app:layout_constraintTop_toBottomOf="@+id/register_edt_code" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_3"
        app:layout_constraintEnd_toEndOf="@+id/login_iv_clean"
        app:layout_constraintStart_toStartOf="@+id/register_edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/register_edt_phone_number" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_3"
        app:layout_constraintEnd_toEndOf="@+id/login_iv_clean"
        app:layout_constraintStart_toStartOf="@+id/register_edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/register_edt_code" />

    <TextView
        android:id="@+id/register_tv_goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="49dp"
        android:text="@string/text_register_goto_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#282B2E"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>