<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/register_setting_psw_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_white" />

    <EditText
        android:id="@+id/register_setting_psd_edt_psd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="44dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/text_input_password"
        android:inputType="number|phone"
        android:maxLength="11"
        android:padding="6dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_3"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/register_setting_psd_iv_show_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_setting_psd_edt_psd"
        app:layout_constraintEnd_toEndOf="@+id/register_setting_psd_edt_psd"
        app:layout_constraintTop_toTopOf="@+id/register_setting_psd_edt_psd"
        app:srcCompat="@drawable/ic_eyes" />

    <EditText
        android:id="@+id/register_setting_psd_edt_confirm_psd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/text_input_confirm_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_3"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/register_setting_psd_edt_psd"
        app:layout_constraintStart_toStartOf="@+id/register_setting_psd_edt_psd"
        app:layout_constraintTop_toBottomOf="@+id/register_setting_psd_edt_psd" />

    <ImageView
        android:id="@+id/register_setting_psd_show_confirm_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:srcCompat="@drawable/ic_eyes"
        app:layout_constraintBottom_toBottomOf="@+id/register_setting_psd_edt_confirm_psd"
        app:layout_constraintEnd_toEndOf="@+id/register_setting_psd_edt_confirm_psd"
        app:layout_constraintTop_toTopOf="@+id/register_setting_psd_edt_confirm_psd"
        />

    <Button
        android:id="@+id/register_setting_psd_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/text_register"
        android:textColor="@color/white"
        android:background="@drawable/login_button_rounder_bg_selector"
        app:layout_constraintEnd_toEndOf="@+id/register_setting_psd_show_confirm_psd"
        app:layout_constraintStart_toStartOf="@+id/register_setting_psd_edt_confirm_psd"
        app:layout_constraintTop_toBottomOf="@+id/register_setting_psd_edt_confirm_psd" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_3"
        app:layout_constraintEnd_toEndOf="@+id/register_setting_psd_iv_show_psd"
        app:layout_constraintStart_toStartOf="@+id/register_setting_psd_edt_psd"
        app:layout_constraintTop_toBottomOf="@+id/register_setting_psd_edt_psd" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_3"
        app:layout_constraintEnd_toEndOf="@+id/register_setting_psd_iv_show_psd"
        app:layout_constraintStart_toStartOf="@+id/register_setting_psd_edt_psd"
        app:layout_constraintTop_toBottomOf="@+id/register_setting_psd_edt_confirm_psd" />

    <TextView
        android:id="@+id/register_setting_psd_tv_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="49dp"
        android:text="@string/text_setting_psd_goto_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#282B2E"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>