<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_ps_close"
        android:layout_width="22dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_white" />

    <EditText
        android:id="@+id/login_edt_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/text_phone_number"
        android:inputType="phone"
        android:padding="6dp"
        android:text="17635901507"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_3"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/login_iv_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_edt_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/login_edt_phone_number"
        app:layout_constraintTop_toTopOf="@+id/login_edt_phone_number"
        app:srcCompat="@drawable/ic_clean" />

    <EditText
        android:id="@+id/login_edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:background="@color/transparent"
        android:ems="10"
        android:hint="@string/text_input_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:text="123456789li"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray_3"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/login_edt_phone_number"
        app:layout_constraintStart_toStartOf="@+id/login_edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/login_edt_phone_number" />

    <ImageView
        android:id="@+id/login_iv_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_edt_password"
        app:layout_constraintEnd_toEndOf="@+id/login_edt_password"
        app:layout_constraintTop_toTopOf="@+id/login_edt_password"
        app:srcCompat="@drawable/ic_eyes" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_button_rounder_bg_selector"
        android:text="@string/text_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_iv_show_password"
        app:layout_constraintStart_toStartOf="@+id/login_edt_password"
        app:layout_constraintTop_toBottomOf="@+id/login_edt_password" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_3"
        app:layout_constraintEnd_toEndOf="@+id/login_iv_clean"
        app:layout_constraintStart_toStartOf="@+id/login_edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/login_edt_phone_number" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_3"
        app:layout_constraintEnd_toEndOf="@+id/login_iv_clean"
        app:layout_constraintStart_toStartOf="@+id/login_edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/login_edt_password" />

    <TextView
        android:id="@+id/login_tv_verity"
        android:layout_width="98dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="5dp"
        android:text="@string/login_verity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

    <TextView
        android:id="@+id/login_tv_regist"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="28dp"
        android:text="注册   |"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_tv_three"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="社交账号登录"
        app:layout_constraintStart_toEndOf="@+id/login_tv_regist"
        app:layout_constraintTop_toTopOf="@+id/login_tv_regist" />


</android.support.constraint.ConstraintLayout>